- Finished email verification feature