@@ -1,11 +1,13 @@
 package com.example.virtualwallet.service;
 
+import org.springframework.core.io.ClassPathResource;
 import org.springframework.mail.javamail.JavaMailSender;
 import org.springframework.mail.javamail.MimeMessageHelper;
 import org.springframework.mail.javamail.MimeMessagePreparator;
 import org.springframework.stereotype.Service;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 
@@ -22,7 +24,7 @@ public class EmailVerificationServiceImpl implements EmailVerificationService {
     public void sendVerificationEmail(String email, String token) {
 
         String subject = "Verify Your Email - Virtual Wallet";
-        String verificationLink = "http://localhost:3308/auth/verify?token=" + token;
+        String verificationLink = "http://localhost:50500/auth/verify?token=" + token;
         String message = "Click the link below to verify your email: \n" + verificationLink;
 
         String htmlMessage = loadEmailTemplate();
@@ -44,9 +46,9 @@ public class EmailVerificationServiceImpl implements EmailVerificationService {
 
     @Override
     public String loadEmailTemplate() {
-        String filePath = "src/main/resources/templates/verify-email-page.html";
         try {
-            return new String(Files.readAllBytes(Paths.get(filePath)));
+            ClassPathResource resource = new ClassPathResource("templates/verify-email-page.html");
+            return new String(resource.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
         } catch (IOException e) {
             e.printStackTrace();
             return "";
